# Yebelo_Assignment

Yebelo_Assignment/: README.md  docker-compose.yml  trades_data.csv
Yebelo_Assignment/docs/: ai-usage.md  architecture.md
Yebelo_Assignment/frontend/: next.config.js  package.json  tsconfig.json
Yebelo_Assignment/frontend/components/: PriceChart.tsx  RsiChart.tsx  TokenSelector.tsx
Yebelo_Assignment/frontend/pages/: index.tsx
Yebelo_Assignment/frontend/pages/api/: ws.ts
Yebelo_Assignment/frontend/styles/: globals.css
Yebelo_Assignment/ingest/: package.json  producer.js
Yebelo_Assignment/rsi-processor/: Cargo.toml
Yebelo_Assignment/rsi-processor/src/: main.rs
Yebelo_Assignment/ws-forwarder/: index.js  package.json
